# dsv

./: main.py  pyproject.toml
dsv/: test_sv_then_weights_try.py  test_svm_is_decomposable.py
