[tool.poetry]
name = "dsv"
version = "0.1.0"
description = ""
authors = ["sergio-els <s.petridis@elsevier.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
